--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ body {
     font-size: 18px;
 }
 
+/* Main content */
+
+.main-content {
+   text-align: center;
+    font-family: 'poppins', serif;
+}
 
 
 
@@ -84,6 +90,7 @@ body {
     font-family: 'caveat', sans-serif;
     width: 100%;
     font-size: 14px;
+    position: absolute;
 }
 
 .footer-container {
