--- a/style.css
+++ b/style.css
@@ -150,6 +150,27 @@ body {
     text-align: center;
 }
 
+/* Facts */
+
+.cat-facts {
+    text-align: center;
+}
+.scrollbox {
+    max-height: 200px;
+    overflow-y: scroll;
+    padding: 20px;
+    border: 5px solid rgb(61, 114, 248);
+    box-sizing: border-box;
+    margin-bottom: 700px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background-color: rgb(235, 250, 115);
+    
+    
+
+}
 
 
 
